# my-anime-manager

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_parse.py
.github/workflows/: docker.yml
docs/: PRD-ai-ui-generation.md  PRD-frontend-refactor.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/api/: client.ts  rssApi.ts  torrentApi.ts
frontend/src/components/: InfoCards.tsx  MatchTable.tsx  PreviewDashboard.tsx  ProcessingResult.tsx  RssManager.tsx  SettingsModal.tsx  TorrentPreview.tsx  TorrentUpload.tsx
frontend/src/components/Cards/: EpisodeEditSheet.tsx  (+2 more)
frontend/src/hooks/: useConfig.ts  useDownloadHistory.ts  usePreviewFlow.ts  useRssSearch.ts  useSubscriptions.ts  useTheme.ts
frontend/src/lib/: toast.ts
frontend/src/pages/: RssPage.tsx  SettingsPage.tsx  TorrentPage.tsx
frontend/src/types/: preview.ts
my_anime_manager/: __init__.py  __main__.py  api.py  config.py  main.py
my_anime_manager/clients/: bangumi.py  mikan.py  qbittorrent.py  tmdb.py
my_anime_manager/data/: __init__.py  bangumi_mikan_map.json  download_history.json  rss_settings.json  subscriptions.json
my_anime_manager/services/: bangumi.py  batch_service.py  downloader.py  image_downloader.py  mapper.py  nfo_generator.py  rss.py  tmdb.py  torrent_preview.py
my_anime_manager/utils/: formatter.py  http_retry.py  parser.py  torrent_file_reader.py  torrent_hash.py  torrent_parser.py
scripts/: download_bangumi_data.py
(+30 files in other folders)
