[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my-anime-manager"
version = "1.0.0"
description = "TMDB + Bangumi integration tool for Jellyfin metadata management with qBittorrent support"
requires-python = ">=3.11"
license = {text = "ISC"}
keywords = ["jellyfin", "tmdb", "bangumi", "nfo", "qbittorrent", "anime"]
dependencies = [
    "httpx>=0.27.0",
    "qbittorrent-api>=2024.2.60",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.9",
    "beautifulsoup4>=4.12",
]

[project.scripts]
anime-manager = "my_anime_manager.main:main_entry"

[tool.setuptools.packages.find]
where = ["."]
